# FluxEM

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  demo.tape  issues.md  pyproject.toml
.github/workflows/: release.yml
artifacts/: results.md
artifacts/results/: results.json
benchmarks/models/: trainer.py
docs/: EMBEDDING_COMPARISON.md  ERROR_MODEL.md  EXPERIMENTS.md  FORMAL_DEFINITION.md  HYBRID_TRAINING.md  SCAN_BASELINE.md  TASKMASTER_PROMPT.md  index.html  paper.html  style.css  vision.html
examples/: transformer_integration.py
experiments/: MODEL_RECIPE.md  README.md
experiments/configs/: ablation.yaml  embedding_comparison.yaml  sample_efficiency.yaml  (+1 more)
fluxem/: __init__.py
fluxem-tools-pkg/: README.md  pyproject.toml
fluxem-tools-pkg/fluxem_tools/: __init__.py  registry.py
fluxem-tools-pkg/fluxem_tools/domains/: __init__.py  acoustics.py  arithmetic.py  astronomy.py  biology.py  calculus.py  chemistry.py  color.py  combinatorics.py  control_systems.py  cooking.py  currency.py  data.py  diy.py  electrical.py  finance.py  fitness.py  fluid_dynamics.py  gardening.py  geometric_algebra.py  geometry.py  geospatial.py  graphs.py  information_theory.py  logic.py  math_advanced.py  music.py  nuclear.py  number_theory.py  optics.py  optimization.py  pharmacology.py  photography.py  physics.py  probability.py  security.py  sets.py  signal_processing.py  statistics.py  temporal.py  (+3 more)
fluxem-tools-pkg/fluxem_tools/integration/: __init__.py
notebooks/: demo.ipynb
scan_inducer/: __init__.py  dsl.py  enumerate.py  experiment_around_right.py  induce.py
tests/: test_acceptance_new_domains.py  test_composition.py  test_compositional.py  test_dsl.py  test_extended.py  test_induce_around_right.py  test_logic.py  test_music.py  test_smoke.py  test_span_detection.py  test_tokenizer.py  test_unified.py
(+148 files in other folders)
