[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxem-tools"
version = "0.1.0"
description = "210+ deterministic computation tools for LLM tool-calling across scientific and practical domains"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hunter Bown" }
]
keywords = [
    "tool-calling",
    "function-calling",
    "llm-tools",
    "deterministic-computation",
    "mathematics",
    "physics",
    "chemistry",
    "science",
    "engineering",
    "qwen",
    "gpt",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Hmbown/FluxEM"
Documentation = "https://huggingface.co/Hmbown/fluxem-tools"
Repository = "https://github.com/Hmbown/FluxEM"

[tool.hatch.build.targets.wheel]
packages = ["fluxem_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
